--- a/pooraa/test-output/old/Suite/methods.html
+++ b/pooraa/test-output/old/Suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b67094">  <td>20/04/16 20:22:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="module2.test3()[pri:0, instance:com.pooraa.merapooraa.module2@15bb6bea]">test3</td> 
-  <td>main@589835301</td>   <td></td> </tr>
-<tr bgcolor="9da28c">  <td>20/04/16 20:22:37</td>   <td>98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="module1.test1()[pri:0, instance:com.pooraa.merapooraa.module1@77e9807f]">test1</td> 
-  <td>main@589835301</td>   <td></td> </tr>
-<tr bgcolor="9da28c">  <td>20/04/16 20:22:37</td>   <td>104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="module1.test2()[pri:0, instance:com.pooraa.merapooraa.module1@77e9807f]">test2</td> 
-  <td>main@589835301</td>   <td></td> </tr>
+<tr bgcolor="8bd765">  <td>20/04/16 22:30:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="module2.test3()[pri:0, instance:com.pooraa.merapooraa.module2@2357d90a]">test3</td> 
+  <td>main@1131040331</td>   <td></td> </tr>
 </table>
