--- a/pooraa/test-output/emailable-report.html
+++ b/pooraa/test-output/emailable-report.html
@@ -31,16 +31,25 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">MeraPooraaOrderPlace</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">10.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">com.pooraa.merapooraa.module1</td><td><a href="#m1"><b>test1</b>  </a></td><td class="numi">1</td><td>1587240503618</td><td class="numi">32</td></tr><tr class="passedodd"><td><a href="#m2"><b>test2</b>  </a></td><td class="numi">1</td><td>1587240503650</td><td class="numi">0</td></tr>
+<tr><th colspan="4">MeraPooraaOrderPlace &#8212; failed</th></tr>
+<tr class="failedodd"><td rowspan="1">com.pooraa.merapooraa.OrderPlace</td><td><a href="#m1"><b>FillLoginPage</b>  </a></td><td class="numi">1</td><td>1587290430762</td><td class="numi">309</td></tr>
 </table>
-<h1>Test</h1>
-<h2 id="m1">com.pooraa.merapooraa.module1:test1</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.pooraa.merapooraa.module1:test2</h2>
+<h1>MeraPooraaOrderPlace</h1>
+<h2 id="m1">com.pooraa.merapooraa.OrderPlace:FillLoginPage</h2>
+<div style="padding-left:3em">
+<p>XlsxDatamerapooraa.xlsx (The system cannot find the file specified)</p>
+java.io.FileInputStream.open0(Native Method)
+<br/>at java.io.FileInputStream.open(Unknown Source)
+<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
+<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
+<br/>at utility.GetCellDataFromXlsx.GetCellData(GetCellDataFromXlsx.java:26)
+<br/>at com.pooraa.merapooraa.LoginPage.RedirectionToCatalogPage(LoginPage.java:22)
+<br/>at com.pooraa.merapooraa.OrderPlace.FillLoginPage(OrderPlace.java:58)
+<br/>25 lines not shown
+</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
