--- a/pooraa/test-output/old/Suite/classes.html
+++ b/pooraa/test-output/old/Suite/classes.html
@@ -4,29 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.pooraa.merapooraa.module1</td>
+<td>com.pooraa.merapooraa.OrderPlace</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
+<td>FillLoginPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
+<td>VerifyMeraPooraaURL</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>OpenHomePage</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>BeforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>CloseCurrentSession</td>
+<td>&nbsp;</td></tr>
 </table>
