--- a/pooraa/test-output/index.html
+++ b/pooraa/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-MeraPooraa">
-                    <span>C:\Users\ankit-trivedi\bhageera\pooraa\testng.xml</span>
+                    <span>C:\Users\ankit-trivedi\bhageera\pooraa\testngxml\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -176,7 +176,7 @@
         </div> <!-- panel MeraPooraa -->
         <div panel-name="test-xml-MeraPooraa" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ankit-trivedi\bhageera\pooraa\testng.xml</span>
+            <span class="header-content">C:\Users\ankit-trivedi\bhageera\pooraa\testngxml\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -231,12 +231,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'FillLoginPage')
 data.setCell(0, 2, 'com.pooraa.merapooraa.OrderPlace')
-data.setCell(0, 3, 309);
+data.setCell(0, 3, 303);
 window.suiteTableData['MeraPooraa']= { tableData: data, tableDiv: 'times-div-MeraPooraa'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 309 ms</span>
+              <span class="suite-total-time">Total running time: 303 ms</span>
               <div id="times-div-MeraPooraa">
               </div> <!-- times-div-MeraPooraa -->
             </div> <!-- times-div -->
@@ -269,17 +269,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">BeforeMethod</span>
-                <span class="method-start">9978 ms</span>
+                <span class="method-start">9098 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">FillLoginPage</span>
-                <span class="method-start">9984 ms</span>
+                <span class="method-start">9103 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">CloseCurrentSession</span>
-                <span class="method-start">10298 ms</span>
+                <span class="method-start">9411 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
