--- a/pooraa/test-output/emailable-report.html
+++ b/pooraa/test-output/emailable-report.html
@@ -31,25 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">MeraPooraaOrderPlace</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">9.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">MeraPooraaOrderPlace</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">13.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">MeraPooraaOrderPlace &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.pooraa.merapooraa.OrderPlace</td><td><a href="#m1"><b>FillLoginPage</b>  </a></td><td class="numi">1</td><td>1587291486214</td><td class="numi">303</td></tr>
+<tr><th colspan="4">MeraPooraaOrderPlace &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">com.pooraa.merapooraa.OrderPlace</td><td><a href="#m1"><b>FillLoginPage</b>  </a></td><td class="numi">1</td><td>1587306645577</td><td class="numi">4866</td></tr>
 </table>
 <h1>MeraPooraaOrderPlace</h1>
 <h2 id="m1">com.pooraa.merapooraa.OrderPlace:FillLoginPage</h2>
-<div style="padding-left:3em">
-<p>XlsxDatamerapooraa.xlsx (The system cannot find the file specified)</p>
-java.io.FileInputStream.open0(Native Method)
-<br/>at java.io.FileInputStream.open(Unknown Source)
-<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-<br/>at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-<br/>at utility.GetCellDataFromXlsx.GetCellData(GetCellDataFromXlsx.java:26)
-<br/>at com.pooraa.merapooraa.LoginPage.RedirectionToCatalogPage(LoginPage.java:22)
-<br/>at com.pooraa.merapooraa.OrderPlace.FillLoginPage(OrderPlace.java:58)
-<br/>25 lines not shown
-</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
