--- a/pooraa/test-output/index.html
+++ b/pooraa/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-MeraPooraa">
-              <span class="suite-name border-failed">MeraPooraa</span>
+              <span class="suite-name border-passed">MeraPooraa</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,21 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-MeraPooraa" class="hide-methods failed suite-MeraPooraa"> (hide)</a> <!-- hide-methods failed suite-MeraPooraa -->
-                      <a href="#" panel-name="suite-MeraPooraa" class="show-methods failed suite-MeraPooraa"> (show)</a> <!-- show-methods failed suite-MeraPooraa -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-MeraPooraa" class="hide-methods passed suite-MeraPooraa"> (hide)</a> <!-- hide-methods passed suite-MeraPooraa -->
+                      <a href="#" panel-name="suite-MeraPooraa" class="show-methods passed suite-MeraPooraa"> (show)</a> <!-- show-methods passed suite-MeraPooraa -->
                     </span>
-                    <div class="method-list-content failed suite-MeraPooraa">
+                    <div class="method-list-content passed suite-MeraPooraa">
                       <span>
-                        <img width="3%" src="failed.png"/>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-MeraPooraa" title="com.pooraa.merapooraa.OrderPlace" hash-for-method="FillLoginPage">FillLoginPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-MeraPooraa -->
+                    </div> <!-- method-list-content passed suite-MeraPooraa -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,9 +116,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-MeraPooraa" class="panel MeraPooraa">
-          <div class="suite-MeraPooraa-class-failed">
+          <div class="suite-MeraPooraa-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.pooraa.merapooraa.OrderPlace</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -127,52 +127,10 @@
                   <a name="FillLoginPage">
                   </a> <!-- FillLoginPage -->
                   <span class="method-name">FillLoginPage</span>
-                  <div class="stack-trace"><b>"java.io.FileNotFoundException: XlsxDatamerapooraa.xlsx (The system cannot find the file specified)
-	at java.io.FileInputStream.open0(Native Method)
-	at java.io.FileInputStream.open(Unknown Source)
-	at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-	at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-	at utility.GetCellDataFromXlsx.GetCellData(GetCellDataFromXlsx.java:26)
-	at com.pooraa.merapooraa.LoginPage.RedirectionToCatalogPage(LoginPage.java:22)
-	at com.pooraa.merapooraa.OrderPlace.FillLoginPage(OrderPlace.java:58)
-... Removed 24 stack frames<br/> java.io.FileNotFoundException: XlsxDatamerapooraa.xlsx (The system cannot find the file specified)
-	at java.io.FileInputStream.open0(Native Method)
-	at java.io.FileInputStream.open(Unknown Source)
-	at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-	at java.io.FileInputStream.&lt;init&gt;(Unknown Source)
-	at utility.GetCellDataFromXlsx.GetCellData(GetCellDataFromXlsx.java:26)
-	at com.pooraa.merapooraa.LoginPage.RedirectionToCatalogPage(LoginPage.java:22)
-	at com.pooraa.merapooraa.OrderPlace.FillLoginPage(OrderPlace.java:58)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:714)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)
-	at org.testng.TestRunner.privateRun(TestRunner.java:767)
-	at org.testng.TestRunner.run(TestRunner.java:617)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:240)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-"</b><br>java.io.FileInputStream.open0(Native Method)<br>java.io.FileInputStream.open(Unknown Source)<br>java.io.FileInputStream.<init>(Unknown Source)<br>java.io.FileInputStream.<init>(Unknown Source)<br>utility.GetCellDataFromXlsx.GetCellData(GetCellDataFromXlsx.java:26)<br>com.pooraa.merapooraa.LoginPage.RedirectionToCatalogPage(LoginPage.java:22)<br>com.pooraa.merapooraa.OrderPlace.FillLoginPage(OrderPlace.java:58)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:714)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:767)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1123)<br>org.testng.TestNG.run(TestNG.java:1031)<br>org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)<br>
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-MeraPooraa-class-failed -->
+          </div> <!-- suite-MeraPooraa-class-passed -->
         </div> <!-- panel MeraPooraa -->
         <div panel-name="test-xml-MeraPooraa" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -231,12 +189,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'FillLoginPage')
 data.setCell(0, 2, 'com.pooraa.merapooraa.OrderPlace')
-data.setCell(0, 3, 303);
+data.setCell(0, 3, 4866);
 window.suiteTableData['MeraPooraa']= { tableData: data, tableDiv: 'times-div-MeraPooraa'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 303 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-MeraPooraa">
               </div> <!-- times-div-MeraPooraa -->
             </div> <!-- times-div -->
@@ -269,17 +227,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">BeforeMethod</span>
-                <span class="method-start">9098 ms</span>
+                <span class="method-start">8524 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">FillLoginPage</span>
-                <span class="method-start">9103 ms</span>
+                <span class="method-start">8530 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">CloseCurrentSession</span>
-                <span class="method-start">9411 ms</span>
+                <span class="method-start">13401 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
